--- a/pom.xml
+++ b/pom.xml
@@ -452,6 +452,7 @@
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.13</version>
+	<scope>provided</scope>
         <!-- Same as the dependency in commons-logging -->
       </dependency>
       <dependency>
@@ -911,6 +912,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
