--- a/web/pom.xml
+++ b/web/pom.xml
@@ -419,7 +419,11 @@
 		<artifactId>flying-saucer-pdf-itext5</artifactId>
 		<version>9.0.1</version>
 	</dependency>
-	
+	<dependency>
+       <groupId>eu.europa.ec.digit</groupId>
+       <artifactId>refapp-support-security-ecas-file</artifactId>
+       <version>1.2.0-SNAPSHOT</version>
+	</dependency>
 	
 	</dependencies>
 
