--- a/web/src/main/webapp/WEB-INF/classes/ecas-config.properties
+++ b/web/src/main/webapp/WEB-INF/classes/ecas-config.properties
@@ -221,9 +221,9 @@ eu.cec.digit.ecas.client.filter.strictSSLHostnameVerification=true
 ## extraGroupHandler:
 ### [Optional]
 ### [DefaultValue=none]
-#eu.cec.digit.ecas.client.filter.extraGroupHandler=eu.cec.digit.ecas.client.validation.CompositeUserDetailsExtraGroupHandler
-#eu.cec.digit.ecas.client.filter.param.name.composite-extra-group-handlers=composite-extra-group-handlers
-#eu.cec.digit.ecas.client.filter.param.value.composite-extra-group-handlers=examples.groups.DepartmentNumberExtraGroupHandler,examples.groups.DomainExtraGroupHandler,examples.groups.EmployeeTypeExtraGroupHandler
+eu.cec.digit.ecas.client.filter.extraGroupHandler=eu.cec.digit.ecas.client.validation.CompositeUserDetailsExtraGroupHandler
+eu.cec.digit.ecas.client.filter.param.name.composite-extra-group-handlers=composite-extra-group-handlers
+eu.cec.digit.ecas.client.filter.param.value.composite-extra-group-handlers=org.fao.geonet.kernel.security.ecas.AddAuthenticatedRole
 ###########################################################################
 ## authEventListeners:
 ### [Optional]
